--- a/index.html
+++ b/index.html
@@ -11,24 +11,24 @@
 </head>
 <body>
     <header>
-        <div class="divMenu"><img src="/imagenes/menu.png" class="imgMenu" ></div>
-        <div class="divCruz"><img src="/imagenes/cruz.png" class="imgCruz"></div>
-        <div class="divLogo"><img src="/imagenes/logo valgra.png" class="imgLogo" ></div> 
-        <div class="divCarrito"><a href="/carrito/carrito.html"><img src="/imagenes/carrito.png" class="imgCarrito"></a>
+        <div class="divMenu"><img src="imagenes/menu.png" class="imgMenu" ></div>
+        <div class="divCruz"><img src="imagenes/cruz.png" class="imgCruz"></div>
+        <div class="divLogo"><img src="imagenes/logo valgra.png" class="imgLogo" ></div> 
+        <div class="divCarrito"><a href="carrito/carrito.html"><img src="imagenes/carrito.png" class="imgCarrito"></a>
             <div class="contadorCarrito"></div></div>       
     </header>
 
     <aside id="aside">
         <div class="aside">
             <div class="hijosAside">Inicio</div>
-            <div class="hijosAside"><a href="/carrito/carrito.html">Carrito</a></div>
-            <div class="hijosAside"><a href="/contacto/contacto.html">Contacto</a></div>
+            <div class="hijosAside"><a href="carrito/carrito.html">Carrito</a></div>
+            <div class="hijosAside"><a href="contacto/contacto.html">Contacto</a></div>
             <div class="copyrightAside">©valgra</div>
         </div>
     </aside>
 
     <section>
-        <img src="/imagenes/logo VG valgra.png" class="imgPortada" >
+        <img src="imagenes/logo VG valgra.png" class="imgPortada" >
         <div class="h2"><h2>Indumentaria masculina</h2></div>
         <div class="flechaAbajo"><i class="fas fa-sort-down"></i></div>
     </section>
@@ -36,7 +36,7 @@
      <article class="articleRemera1">
         <div class="contenedorRemera1">
             <a href="html remeras/remera1.html">
-                <div class="divRemera1"><img src="/imagenes/remera 1 frontal.png" class="remera1"></div>
+                <div class="divRemera1"><img src="imagenes/remera 1 frontal.png" class="remera1"></div>
                 <div class="nombreRemera">THE BEST ONE</div>
             </a>
         </div>
@@ -45,7 +45,7 @@
     <article class="articleRemera2">
         <div class="contenedorRemera2">
             <a href="html remeras/remera2.html">
-                <div class="divRemera2"><img src="/imagenes/remera 2 frontal.png" class="remera2"></div>
+                <div class="divRemera2"><img src="imagenes/remera 2 frontal.png" class="remera2"></div>
                 <div class="nombreRemera">THE BEST TWO</div>
             </a>
         </div>
@@ -54,7 +54,7 @@
     <article class="articleRemera3">
         <div class="contenedorRemera3">
             <a href="html remeras/remera3.html">
-                <div class="divRemera3"><img src="/imagenes/remera 3 trasera.png" class="remera3"></div>
+                <div class="divRemera3"><img src="imagenes/remera 3 trasera.png" class="remera3"></div>
                 <div class="nombreRemera">MIRADA EN ALTO</div>  
             </a>
         </div>
@@ -65,7 +65,7 @@
     
 
     <footer>
-            <div class="divInstagram"><img src="/imagenes/instagram.png" class="imgInstagram"></div>
+            <div class="divInstagram"><img src="imagenes/instagram.png" class="imgInstagram"></div>
             <div class="copyright">© valgra. Diseñado y desarrollado por David Valdez Gramajo </div>
     </footer>
     
