--- a/html remeras/remera2.html
+++ b/html remeras/remera2.html
@@ -20,7 +20,7 @@
 
     <aside id="aside">
         <div class="aside">
-            <div class="hijosAside"><a href="/index.html">Inicio</a></div>
+            <div class="hijosAside"><a href="/index.php">Inicio</a></div>
             <div class="hijosAside"><a href="/carrito/carrito.html">Carrito</a></div>
             <div class="hijosAside">Contacto</div>
             <div class="copyrightAside">©valgra</div>
